# websocket-app

./: .dockerignore  .gitignore  CI-CD-SUMMARY.md  CLIENT-USAGE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FIXING-CI-ISSUES.md  INGRESS-SETUP.md  K8S-DEPLOYMENT-SUMMARY.md  LOAD-BALANCING-GUIDE.md  PROBE-FIX.md  README.md  format-code.sh
.github/: CI-CD-SETUP.md
.github/workflows/: ci-cd.yml
flux-system/: gitrepository.yaml  imagepolicy.yaml  kustomization-dev.yaml  kustomization-production.yaml  kustomization-staging.yaml
k8s/: README.md
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/overlays/dev/: image-patch.yaml  ingress-patch.yaml  kustomization.yaml  replica-patch.yaml  resource-patch.yaml
k8s/overlays/production/: image-patch.yaml  ingress-patch.yaml  kustomization.yaml  replica-patch.yaml  resource-patch.yaml
k8s/overlays/staging/: image-patch.yaml  ingress-patch.yaml  kustomization.yaml
scripts/: deploy-manual.sh  setup-flux.sh  test-deployment.sh
src/: client.rs  server.rs
