[package]
name = "websocket-audio-streamer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
